--- a/index.html
+++ b/index.html
@@ -1,1 +1,41 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <base href="/">
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>M I</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
+  <!-- inject:css -->
+  <link rel="stylesheet" href="/css/main.css?1471477185600">
+  <!-- endinject -->
+</head>
+<body>
+
+  <my-app>Loading...</my-app>
+
+  <script>
+  // Fixes undefined module function in SystemJS bundle
+  function module() {}
+  </script>
+
+  <!-- shims:js -->
+  <!-- endinject -->
+
+  
+
+  <!-- libs:js -->
+  <!-- endinject -->
+
+  <!-- inject:js -->
+  <script src="/js/shims.js?1471477185597"></script>
+  <script src="/js/app.js?1471477185598"></script>
+  <!-- endinject -->
+
+  
+
+</body>
+</html>
