--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>M I</title>
+  <title>HI! I'M M I</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/main.css?1471477185600">
+  <link rel="stylesheet" href="/css/main.css?1471566863078">
   <!-- endinject -->
 </head>
 <body>
@@ -31,8 +31,8 @@
   <!-- endinject -->
 
   <!-- inject:js -->
-  <script src="/js/shims.js?1471477185597"></script>
-  <script src="/js/app.js?1471477185598"></script>
+  <script src="/js/shims.js?1471566863076"></script>
+  <script src="/js/app.js?1471566863077"></script>
   <!-- endinject -->
 
   
