--- a/index.html
+++ b/index.html
@@ -4,13 +4,15 @@
   <base href="/">
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>HI! I'M M.I</title>
+  <title>I'M M.I</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
   <link rel="icon" type="image/png" href="assets/icon/favicon-32.png" sizes="32x32">
+  <!-- Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700|Source+Code+Pro:400,500,600" rel="stylesheet">
   <!-- inject:css -->
-  <link rel="stylesheet" href="/css/main.css?1472228274769">
+  <link rel="stylesheet" href="/css/main.css?1472977684077">
   <!-- endinject -->
 </head>
 <body>
@@ -31,8 +33,8 @@
   <!-- endinject -->
 
   <!-- inject:js -->
-  <script src="/js/shims.js?1472228274766"></script>
-  <script src="/js/app.js?1472228274767"></script>
+  <script src="/js/shims.js?1472977684074"></script>
+  <script src="/js/app.js?1472977684075"></script>
   <!-- endinject -->
 
   
